--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -1,5 +1,5 @@
 Options:
-  execution: full #full (default), fast
+  execution: full # Optional: default full. Values: full or fast
 
 Tools:
   - security-checker
@@ -14,6 +14,7 @@ Tools:
 # security-checker:
 #   executablePath: security-checker
 #   otherArguments: '-format json'
+#   ignoreErrorsOnExit: false # Optional: default false
 
 # phpstan:
 #   executablePath: phpstan
@@ -22,15 +23,17 @@ Tools:
 #   paths: ['./src']
 #   level: 8 #level 0-8 (0 default, 8 max)
 #   otherArguments: '--no-progress'
+#   ignoreErrorsOnExit: false # Optional: default false
 
 # parallel-lint:
 #   executablePath: parallel-lint
 #   paths: ['./']
 #   exclude: [vendor]
 #   otherArguments: '--colors'
+#   ignoreErrorsOnExit: false # Optional: default false
 
 # phpcbf:
-#   usePhpcsConfiguration: true #if true no more configuration is needed. It graves the arguments of phpcs configuration
+#   usePhpcsConfiguration: true # if true no more configuration is needed. It graves the arguments of phpcs configuration
 #   executablePath: phpcbf
 #   paths: ['./']
 #   standard: './myRules.xml' #or predefined rules: Squiz, PSR12, Generic, PEAR
@@ -38,6 +41,7 @@ Tools:
 #   error-severity: 1
 #   warning-severity: 6
 #   otherArguments: '--report=summary --parallel=2'
+#   ignoreErrorsOnExit: false # Optional: default false
 
 # phpcs:
 #   executablePath: phpcs
@@ -47,6 +51,7 @@ Tools:
 #   error-severity: 1
 #   warning-severity: 6
 #   otherArguments: '--report=summary --parallel=2'
+#   ignoreErrorsOnExit: false # Optional: default false
   
 # phpmd:
 #   executablePath: phpmd
@@ -54,10 +59,12 @@ Tools:
 #   rules: './myRules.xml' #or predefined rules cleancode,codesize,controversial,design,naming,unusedcode
 #   exclude: [vendor]
 #   otherArguments: --strict
+#   ignoreErrorsOnExit: false # Optional: default false
 
 # phpcpd:
 #   executablePath: phpcpd
 #   paths: ['./']
 #   exclude: ['vendor']
 #   otherArguments: '--min-lines=5'
+#   ignoreErrorsOnExit: false # Optional: default false
  
