feat (Release) Created builds for 2.2.0 release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Build the Aplication
       run: |
+        php githooks app:pre-build
         branch=${GITHUB_REF##*/}
         echo ${branch}
         prefix='rc-'
