--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -1,4 +1,5 @@
 {
+    includes: [ %currentWorkingDirectory%/phpstan-baseline.neon ]
     parameters: {
         tmpDir: %currentWorkingDirectory%/tools/tmp,
         level: 8
@@ -18,7 +19,9 @@
             # '#Property [a-zA-Z0-9\\_]+Command::\$root \(string\) does not accept string\|false.#'
         ]
         excludePaths: [
-            %currentWorkingDirectory%/src/Tools/Execution/ProcessFake # inherits from Symfony
+            %currentWorkingDirectory%/src/Tools/Execution/Process, # inherits from Symfony
+            %currentWorkingDirectory%/src/Tools/Execution/ProcessFake,
+            %currentWorkingDirectory%/src/Tools/Execution/ExecutionFakeTrait
         ]
     }
 }
