--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "php": ">=7.1"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.19",
         "intonate/tinker-zero": "1.*",
         "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | 8.*",
         "laravel-zero/phar-updater": "^1.0.6",
