--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -1,6 +1,6 @@
 Options:
   execution: full # Optional: default full. Values: full or fast
-  processes: 1 # Number of parallel processes
+  processes: 1 # Optional: default 1. Number of parallel processes
 
 Tools:
   - security-checker
