--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
     branches-ignore: [ master ]
 
-env:
-  extensions: :opcache #intl, pcov #fileinfo is needed for Windows
+# env:
+#   extensions: zip #intl, pcov #fileinfo is needed for Windows
 
 jobs:
   build_rc:    
@@ -19,24 +19,22 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.1', '7.3']
+        php-versions: ['7.1', '7.3', '8.0'] 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install PHP
       uses: shivammathur/setup-php@v2 
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.extensions }} #optional
-        ini-values: "post_max_size=256M" #optional
+        # extensions: ${{ env.extensions }} #optional
         coverage: none
 
     - name: Install dependencies
       run: composer update --prefer-dist --no-progress
 
     - name: Install Humbug/Box
-      if: ${{ '7.1' == matrix.php-versions }}
       run: composer global require humbug/box
 
     - name: Build the Aplication
@@ -52,22 +50,30 @@ jobs:
     - name: 'Tar files to keep permissions'
       run: |
         tar -cvf githooks-71.tar builds/php7.1/githooks
-        tar -cvf githooks-73.tar builds/githooks
-        ls -lah builds/githooks builds/php7.1/githooks
+        tar -cvf githooks-73.tar builds/php7.3/githooks
+        tar -cvf githooks-80.tar builds/githooks
+        # ls -lah builds/githooks builds/php7.1/githooks
   
     - name: Upload php 7.1 build
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3
       if: ${{ '7.1' == matrix.php-versions }}
       with:
         name: githooks-71
         path: githooks-71.tar
 
     - name: Upload php 7.3 build
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3
       if: ${{ '7.3' == matrix.php-versions }}
       with:
         name: githooks-73
         path: githooks-73.tar
+
+    - name: Upload php 8.0 build
+      uses: actions/upload-artifact@v3
+      if: ${{ '8.0' == matrix.php-versions }}
+      with:
+        name: githooks-80
+        path: githooks-80.tar
 
   test_rc:    
     name: Test the Build in php ${{ matrix.php-versions }}
@@ -77,18 +83,17 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.2', '8.1']
+        php-versions: ['7.2', '7.4', '8.1']
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install PHP
       uses: shivammathur/setup-php@v2 
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.extensions }} #optional
+        # extensions: ${{ env.extensions }} #optional
         tools: phpcs, phpcbf, phpmd, phpstan, parallel-Lint, phpcpd
-        ini-values: "post_max_size=256M" #optional
         coverage: none
   
     - name: Get composer cache directory
@@ -96,7 +101,7 @@ jobs:
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ${{ steps.composercache.outputs.dir }}
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
@@ -107,27 +112,24 @@ jobs:
         composer install --prefer-dist --no-progress
         chmod -R +x tools/*
 
-    - name: Delete Old Builds
-      run: rm builds/githooks builds/php7.1/githooks && echo ${{ secrets.PAT_TOKEN_TO_COMMIT }}
-
     - uses: actions/download-artifact@v3
       with:
-        name: githooks-71
-
-    - uses: actions/download-artifact@master
-      with:
-        name: githooks-73
+        path: ${{ github.GITHUB_WORKSPACE }}
 
     - name: Extract and check builds
       run: |
-        tar -xf githooks-71.tar
-        tar -xf githooks-73.tar
+        rm builds/githooks builds/php7.1/githooks builds/php7.3/githooks
+        tar -xf githooks-71/githooks-71.tar
+        tar -xf githooks-73/githooks-73.tar
+        tar -xf githooks-80/githooks-80.tar
         ls -lah builds
+        # builds/php7.1/githooks --version
+        # builds/php7.3/githooks --version
+        # builds/githooks --version
         git status
   
     - name: Testing the Aplication
       run: |
-        ls -lah builds builds/php7.1
         echo -e "\e[42m\e[30m**** Release Test Suite ****\033[0m"
         vendor/bin/phpunit --group release
       shell: bash
