--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.19",
         "intonate/tinker-zero": "1.*",
-        "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | 8.*",
+        "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | 8.* | 9.*",
         "laravel-zero/phar-updater": "^1.0.6",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.3",
@@ -45,7 +45,7 @@
         "phpunit/php-code-coverage": "^6.0 | ^7.0 | ^8.0 | ^9.0",
         "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/yaml": "^3.0 | ^4.0 | ^5.0"
+        "symfony/yaml": "^3.0 | ^4.0 | ^5.0 | 6.*"
     },
     "autoload": {
         "psr-4": {
