--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -9,6 +9,7 @@
         # ]
         checkMissingIterableValueType: false
         ignoreErrors: [
+            '#Call to an undefined static method Illuminate\\Support\\Facades\\Storage::[a-zA-Z\\_]+\(\)#', # Needed for php 7.1
         ]
         excludePaths: [
             %currentWorkingDirectory%/src/Tools/Process/, # inherits from Symfony
