--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,10 +137,10 @@ jobs:
 
       - name: Extract and check builds
         run: |
-          php githooks app:extract-build --all
-          # tar -xvf githooks-71/githooks-71.tar
-          # tar -xvf githooks-73/githooks-73.tar
-          # tar -xvf githooks-81/githooks-81.tar
+          # php githooks app:extract-build --all
+          tar -xvf githooks-7.1/githooks-7.1.tar
+          tar -xvf githooks-7.3/githooks-7.3.tar
+          tar -xvf githooks-8.1/githooks-8.1.tar
           ls -lah builds
           git status
 
