refactor Created Storage for avoid php-mock and simplify filesystem access

--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -10,6 +10,7 @@
         checkMissingIterableValueType: false
         ignoreErrors: [
             '#Call to an undefined static method Illuminate\\Support\\Facades\\Storage::[a-zA-Z\\_]+\(\)#', # Needed for php 7.1
+            '#Call to an undefined method Illuminate\\Contracts\\Filesystem\\Filesystem::path\(\).#'
         ]
         excludePaths: [
             %currentWorkingDirectory%/src/Tools/Process/, # inherits from Symfony
