--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -1,8 +1,12 @@
 name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
-  schedule:
-    - cron:  '0 4 * * sun' # Sundays at 04 am
+  # schedule:
+  #   - cron:  '0 4 * * sun' # Sundays at 04 am
+  push:
+   branches-ignore: [ rc** ]
+  pull_request:
+    branches-ignore: [ master ]
 
 
 env:
@@ -18,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['8.3']
+        php-versions: ['8.4']
     name: Code Coverage
     steps:
     - name: Checkout
@@ -68,7 +72,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['8.3']
+        php-versions: ['8.4']
     name: Infection
     steps:
     - name: Checkout
@@ -121,7 +125,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['8.3']
+        php-versions: ['8.4']
     name: PhpMetrics
     steps:
     - name: Checkout
