--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -1,12 +1,8 @@
 name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
-  # schedule:
-  #   - cron:  '0 4 * * sun' # Sundays at 04 am
-  push:
-   branches-ignore: [ rc** ]
-  pull_request:
-    branches-ignore: [ master ]
+  schedule:
+    - cron:  '0 4 * * sun' # Sundays at 04 am
 
 env:
   extensions: mbstring #intl, pcov
