--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -1,8 +1,9 @@
 name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
-  schedule:
-    - cron:  '0 4 * * sun' # Sundays at 04 am
+  push
+  # schedule:
+  #   - cron:  '0 4 * * sun' # Sundays at 04 am
 
 env:
   extensions: mbstring #intl, pcov
