feat (Configuration File) Add format in php which has priority over yml

--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -1,3 +1,4 @@
+# Old Configuration File. Now in php format
 Options:
   execution: full # Optional: default full. Values: full or fast
   processes: 1 # Optional: default 1. Number of parallel processes
