--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -1,6 +1,7 @@
 name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
+  # push
   schedule:
     - cron:  '0 4 * * sun' # Sundays at 04 am
 
