--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -1,4 +1,4 @@
-# Old Configuration File. Now in php format
+# Old Configuration File. Now in php
 Options:
   execution: full # Optional: default full. Values: full or fast
   processes: 1 # Optional: default 1. Number of parallel processes
