chore Replaced Local php security checker by composer audit in readme and dist configuration file

--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -14,7 +14,7 @@ Tools:
 
 # Configuration of each tool
 # security-checker:
-#   executablePath: security-checker
+#   executablePath: composer audit
 #   otherArguments: '-format json'
 #   ignoreErrorsOnExit: false # Optional: default false
 
