--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.1', '7.3', '8.1'] 
+        php-versions: ['7.1'] #, '7.3', '8.1'] 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -67,7 +67,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.2', '8.0', '8.4']
+        php-versions: ['7.2'] #, '8.0', '8.4']
     steps:
     - name: Checkout
       uses: actions/checkout@v4
